Add History Video, Link to book

--- a/about/history/index.html
+++ b/about/history/index.html
@@ -11,15 +11,14 @@
     {{.Include "/templates/header.html"}}
     <div class="container">
         <h1>Our History</h1>
+        <iframe src="https://www.youtube.com/embed/93nVWT6mK0s?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen class="ncyc-promo"></iframe>
 	<h2>Timeline</h2>
         <div class="google-maps">
             <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1stSJntKvx891TASu1W_WAyBNen0qPrW1k9bQi4srF9o&font=OldStandard&lang=en&timenav_position=top&initial_zoom=2&height=650' allowfullscreen class="history-timeline"></iframe>
         </div>
 	<h2>"The History of Millhousen" Book</h2>
 	<p>This book was put together in 1984 to celebrate 150 years of our parish and our town. It was reprinted for our 175th anniversary and digitized in 2017 by Kenny Stier.</p>
-        <object data="https://attic.flexstart.me/dusty-box/the-story-of-millhousen.pdf" type="application/pdf" width="100%" height="800">
-                <p>This browser does not support PDFs. Please <a href="https://attic.flexstart.me/dusty-box/the-story-of-millhousen.pdf">download the PDF</a> to view it.</p>
-        </object>
+    <p><a href="https://attic.flexstart.me/dusty-box/the-story-of-millhousen.pdf">Download "The Story of Millhousen"</a> (133 MB)</p>
 	<h2>More Old Photos</h2>
 	<p>Many old photos and documents can be found on <a href="https://millhousen.shutterfly.com/">this Shutterfly site</a>. There are also many photos hanging in Stone's Family Restaurant and the parish office.</p>
     </div>
