Add to History Page

--- a/about/history/index.html
+++ b/about/history/index.html
@@ -16,9 +16,21 @@
         <div class="google-maps">
             <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1stSJntKvx891TASu1W_WAyBNen0qPrW1k9bQi4srF9o&font=OldStandard&lang=en&timenav_position=top&initial_zoom=2&height=650' allowfullscreen class="history-timeline"></iframe>
         </div>
-	<h2>"The History of Millhousen" Book</h2>
+	<h2>"The Story of Millhousen" Book</h2>
 	<p>This book was put together in 1984 to celebrate 150 years of our parish and our town. It was reprinted for our 175th anniversary and digitized in 2017 by Kenny Stier.</p>
     <p><a href="https://attic.flexstart.me/dusty-box/the-story-of-millhousen.pdf">Download "The Story of Millhousen"</a> (133 MB)</p>
+    <h2>Map of Millhousen (1882)</h2>
+        <a href="/img/millhousen-map-1882.jpg"><img src="/img/millhousen-map-1882.jpg" alt="1882 Millhousen Map"></a>
+    <h2>Historic Parish Records</h2>
+        <p>Below are some spreadsheets compiled by <a href="http://evergreen.lib.in.us/eg/opac/results?qtype=author;locg=1;detail_record_view=0;query=Meyer Greg ">Greg Meyer</a> of parish records from 1840-1940. Using CTRL-F, you can perform searches of the records.</p>
+        <h3>Baptisms</h3>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTPlLHgDDrX8WrrQr9jsRDCtkgod_rw7_cxufT_PIp6KiBDnmf1jOyTXOy6aaGYeuf6xCWyaFZiuxrI/pubhtml?gid=829502978&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                <h3>Marriages</h3>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTTHDiZqwWzrCfqh_i6qp0onsPYMPKy-QYY-WOOdM5gYvc-1DobytJl69qGBhDtwbbJqxPHGig6uFXX/pubhtml?gid=775073645&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+        <h3>Deaths</h3>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSQGOrUdwUk0tZc1Tqd9alWxpgBbdjxxfiokrXghAYE6N5kbfbGH4QxP-uXkqtb2PaP1jVcnwZwTaTL/pubhtml?gid=1445049895&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+        <h2>Cemetery Search</h2>
+        <p>Most headstones are documented on <a href="https://www.findagrave.com/cemetery/1973353/immaculate-conception-catholic-church-cemetery">Find A Grave</a>.</p>
 	<h2>More Old Photos</h2>
 	<p>Many old photos and documents can be found on <a href="https://millhousen.shutterfly.com/">this Shutterfly site</a>. There are also many photos hanging in Stone's Family Restaurant and the parish office.</p>
     </div>
