Add Link to Stone's website

--- a/about/history/index.html
+++ b/about/history/index.html
@@ -31,7 +31,7 @@
         <h2>Cemetery Search</h2>
         <p>Most headstones are documented on <a href="https://www.findagrave.com/cemetery/1973353/immaculate-conception-catholic-church-cemetery">Find A Grave</a>.</p>
 	<h2>More Old Photos</h2>
-	<p>Many old photos and documents can be found on <a href="https://millhousen.shutterfly.com/">this Shutterfly site</a>. There are also many photos hanging in Stone's Family Restaurant and the parish office.</p>
+        <p>Many old photos and documents can be found on <a href="https://millhousen.shutterfly.com/">this Shutterfly site</a>. There are also many photos hanging in <a href="https://stonesfamilyrestaurant.com/">Stone's Family Restaurant</a> and the parish office.</p>
     </div>
     {{.Include "/templates/footer.html"}}
 </body>
