Youth Ministry Update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item">
+           <!-- <div class="item">
                 <div class="img-slide4">
                     <div class="carousel-caption">
                         <p>Please support our trip!</p>
@@ -48,7 +48,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="item">
                 <div class="img-slide1">
                     <div class="carousel-caption">
