--- a/youth-ministry/index.html
+++ b/youth-ministry/index.html
@@ -30,23 +30,23 @@
     <div class="stripe ncyc">
         <div class="ncyc-content">
             <img src="/img/ncyc.png" alt="NCYC logo">
-            <h2>NCYC 2017 is coming quickly!</h2>
-            <iframe src="https://www.youtube.com/embed/svaDR7CJKbQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen class="ncyc-promo"></iframe>
-            <p>Our trip to the National Catholic Youth Conference is near! Please support us in our fundraising efforts!</p>
-		<h3>Stone's Benefit Dinner - August 20th</h3>
-		<p>Come to Stone's Family Restaurant between 4pm and 6pm to support our trip AND feed your family! The buffet style meal will include Stone's Famous Fried Chicken, mashed potatoes and gravy, slaw, potato salad and more!</p>
-		<h3>Dairy Queen Day - September 14th</h3>
-		<p>Visit us at the Westport Dairy Queen between 4pm and 9pm for a cool treat served up by your fellow parishioners!</p>
-		<h3>Aluminum Can Collection - September 17th to October 22nd</h3>
+            <h2>NCYC 2017 was great!</h2>
+            <p>Our trip to the National Catholic Youth Conference was wonderful! Thank you so much for your support!</p>
 		
-            <a href="http://www.ncyc.info/" target="_blank" class="btn btn-default">
-                NCYC 2017 Website
-            </a>
         </div>
     </div>
     <div class="stripe gray-stripe">
         <h1>Other Upcoming Youth Events</h1>
-        <p>Cincinnati Reds Game - August 27th</p>
+        <p>Shut-in Fruit Basket Delivery - December 10th</p>
+        <p>Youth, please bring the produce corresponding to your grade below.</p>
+        <ul>
+        <li>6th - Apples</li>
+        <li>8th - Oranges</li>
+        <li>9th - Bananas</li>
+        <li>11th - Grapes</li>
+        <li>12th - Grapefruit</li>
+
+        </ul>
     </div>
 
     {{.Include "/templates/footer.html"}}
