--- a/index.html
+++ b/index.html
@@ -18,18 +18,31 @@
         </ol>
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
-            <!-- <div class="item active">
-                <div class="img-slide3">
+            <div class="item active">
+
+
+            <div class="item">
+                <div class="img-slide1">
                     <div class="carousel-caption">
-                        <p>The parish auction will be on August 12th!</p>
-                        <a href="/events/auction/" class="btn btn-default">
-                            Learn More
+                        <p>Join us this Christmas!</p>
+                        <a href="/calendar/" class="btn btn-default">
+                            Christmas Mass Times
                         </a>
                     </div>
                 </div>
-            </div> -->
-            <div class="item active">
+            </div>
+            
+                        <div class="item">
                 <div class="img-slide2">
+                    <div class="carousel-caption">
+                        <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
+                        <a href="/about/history/" class="btn btn-default">
+                            Our History
+                        </a>
+                    </div>
+                </div>
+            </div>
+                                <div class="img-slide3">
                     <div class="carousel-caption">
                         <p>Join us for Mass every Sunday at 8 AM!</p>
                         <a href="/about/directions/" class="btn btn-default">
@@ -38,7 +51,7 @@
                     </div>
                 </div>
             </div>
-           <!-- <div class="item">
+                       <!-- <div class="item">
                 <div class="img-slide4">
                     <div class="carousel-caption">
                         <p>Please support our trip!</p>
@@ -49,16 +62,16 @@
                     </div>
                 </div>
             </div> -->
-            <div class="item">
-                <div class="img-slide1">
+                        <!-- <div class="item active">
+                <div class="img-slide3">
                     <div class="carousel-caption">
-                        <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
-                        <a href="/about/history/" class="btn btn-default">
-                            Our History
+                        <p>The parish auction will be on August 12th!</p>
+                        <a href="/events/auction/" class="btn btn-default">
+                            Learn More
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- Carousel controls -->
         <a class="carousel-control left" href="#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a>
