--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                     </div>
                 </div>
             </div>
+                                    <div class="item">
+
                                 <div class="img-slide3">
                     <div class="carousel-caption">
                         <p>Join us for Mass every Sunday at 8 AM!</p>
@@ -51,6 +53,7 @@
                         </a>
                     </div>
                 </div>
+            </div>
                        <!-- <div class="item">
                 <div class="img-slide4">
                     <div class="carousel-caption">
