Christmas Mass Carousel

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="item">
                 <div class="img-slide1">
                     <div class="carousel-caption">
-                        <p>Join us this Christmas!</p>
+                        <p>Join us this Christmas Eve at 4PM or 6PM!</p>
                         <a href="/calendar/" class="btn btn-default">
                             Christmas Mass Times
                         </a>
@@ -47,7 +47,7 @@
 
                                 <div class="img-slide3">
                     <div class="carousel-caption">
-                        <p>Join us for Mass every Sunday at 8 AM!</p>
+                        <p>Mass for the 4th Sunday of Advent will be on Saturday at 4PM.</p>
                         <a href="/about/directions/" class="btn btn-default">
                             Get Directions
                         </a>
