--- a/index.html
+++ b/index.html
@@ -18,22 +18,11 @@
         </ol>
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
-            <div class="item active">
 
 
-            <div class="item">
-                <div class="img-slide1">
-                    <div class="carousel-caption">
-                        <p>Join us this Christmas Eve at 4PM or 6PM!</p>
-                        <a href="/calendar/" class="btn btn-default">
-                            Christmas Mass Times
-                        </a>
-                    </div>
-                </div>
-            </div>
-                        </div>
 
-                        <div class="item">
+
+                        <div class="item active">
                 <div class="img-slide2">
                     <div class="carousel-caption">
                         <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
@@ -47,7 +36,7 @@
 
                                 <div class="img-slide3">
                     <div class="carousel-caption">
-                        <p>Mass for the 4th Sunday of Advent will be on Saturday at 4PM.</p>
+                        <p>Join us for Mass every Sunday at 8 AM!</p>
                         <a href="/about/directions/" class="btn btn-default">
                             Get Directions
                         </a>
