Church is Cancelled

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 
-                        <div class="item active">
+                        <div class="item">
                 <div class="img-slide2">
                     <div class="carousel-caption">
                         <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
@@ -32,11 +32,11 @@
                     </div>
                 </div>
             </div>
-                                    <div class="item">
+                                    <div class="item active">
 
                                 <div class="img-slide3">
                     <div class="carousel-caption">
-                        <p>Join us for Mass every Sunday at 8 AM!</p>
+                        <p>Mass for January 14th has been cancelled due to weather conditions.</p>
                         <a href="/about/directions/" class="btn btn-default">
                             Get Directions
                         </a>
