--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                                 <div class="img-slide3">
                     <div class="carousel-caption">
-                        <p>Mass for January 14th has been cancelled due to weather conditions.</p>
+                        <p>Join us for Mass every Sunday at 8 AM!</p>
                         <a href="/about/directions/" class="btn btn-default">
                             Get Directions
                         </a>
