Add "Church Closings" Flier to Homepage

--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
                                 <a href="https://www.facebook.com/Millhousen/" class="btn btn-default">
                                 Check us out on Facebook!
                             </a>
+                                <a href="/about/church-closings.pdf" class="btn btn-default">
+                                Get Closing Notifications!
+                            </a>
                             </div>
                         </div>
                     </div>
