Add Auction Back to Carousel

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-                                    <div class="item active">
+                                    <div class="item">
 
                                 <div class="img-slide3">
                     <div class="carousel-caption">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div> -->
-                        <!-- <div class="item active">
+                         <div class="item active">
                 <div class="img-slide3">
                     <div class="carousel-caption">
                         <p>The parish auction will be on August 12th!</p>
@@ -63,7 +63,7 @@
                         </a>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </div>
         <!-- Carousel controls -->
         <a class="carousel-control left" href="#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a>
