--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -221,12 +221,16 @@
     </div>
     <div class="stripe white-stripe">
         <div class="row">
-            <div>
+            <div class="col-md-6">
                 <h3>Full Consignment Request</h3>
                 <object data="consignment-request.pdf" type="application/pdf" width="100%" height="800">
                 <p>This browser does not support PDFs. Please <a href="consignment-request.pdf">download the PDF</a> to view it.</p>
-            </object>
-	   </div>
+              </object></div> 
+            <div class="col-md-6"> 
+                <h3>Help Wanted!</h3> 
+                <object data="auction-volunteer.pdf" type="application/pdf" width="100%" height="800"> 
+                <p>This browser does not support PDFs. Please <a href="auction-volunteer.pdf">download the PDF</a> to view it.</p> 
+            </object></div> 
         
         </div>
     </div>
