--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -17,16 +17,16 @@
         <h1 class="main-title">Immaculate Conception Community Auction</h1>
         <p>Saturday, August 11th 2018 beginning at 9:30am</p>
     </div>
-  <!--  <div class="stripe white-stripe">
+  <div class="stripe white-stripe">
         <h2>Sale Bill</h2>
-        <p>as of August 4, 2017</p>
-        <object data="sale-bill-2017.pdf" type="application/pdf" width="100%" height="800">
-                <p>This browser does not support PDFs. Please <a href="sale-bill-2017.pdf">download the PDF</a> to view it.</p>
+        <p>as of July 26, 2018</p>
+        <object data="sale-bill-2018.pdf" type="application/pdf" width="100%" height="800">
+                <p>This browser does not support PDFs. Please <a href="sale-bill-2018.pdf">download the PDF</a> to view it.</p>
             </object>
         <a href="https://www.auctionzip.com/Listings/3112074.html" class="btn btn-inv">
                             View More on AuctionZip
             </a>
-    </div> -->
+    </div>
 <div class="stripe white-stripe">
         <h2>Raffle Request</h2>
         <object data="raffle-request.pdf" type="application/pdf" width="100%" height="800">
