Add lay leadership positions

--- a/about/lay-leadership/index.html
+++ b/about/lay-leadership/index.html
@@ -11,21 +11,28 @@
     {{.Include "/templates/header.html"}}
     <div class="container">
         <h1>Lay Leadership</h1>
-        <p>Elections are to be held soon!</p>
+        <p>Many passionate parishioners help the parish by taking leadership roles in councils and committees.</p>
+	<h2>Parish Council</h2>
+        <ul>
+		<li>Tim Hoeing, President</li>
+		<li>Aaron Gault, Vice President</li>
+		<li>Dana Fledderman, Secretary</li>
+		<li>Joe Hamilton</li>
+		<li>Steve AmRhein</li>
+	</ul>
+        <h2>Faith Formation Commission</h2>
+        <ul>
+		<li>Mollie Johannigman, Chair</li>
+	</ul>
+        <h2>Buildings and Grounds Committee</h2>
+        <ul>
+		<li>Ken Stone, Chair</li>
+	</ul>
         <!-- <p>Many passionate parishioners help the parish by taking leadership roles in councils and committees.</p>
         <h2>Board of Directors</h2>
         <p>Purpose, who we are, what we do</p>
 
-        <h2>Parish Council</h2>
-        <p>Purpose, who we are, what we do</p>
-
         <h2>Finance Committee</h2>
-        <p>Purpose, who we are, what we do</p>
-
-        <h2>Faith Formation Commission</h2>
-        <p>Purpose, who we are, what we do</p>
-
-        <h2>Buildings and Grounds Committee</h2>
         <p>Purpose, who we are, what we do</p>
 
         <h2>Music Director</h2>
