Update Staff Listing

--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -30,12 +30,11 @@
             <div class="col-md-6">
                 <div class="business-card">
                     <div class="media">
-                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/mm.png" alt="Kathy Westrick"> </div>
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/mm.png" alt="Mollie Johannigman"> </div>
                         <div class="media-body">
-                            <h2 class="media-heading">Kathleen Westrick</h2>
-                            <div class="job">Religious Education Administrator</div>
-                            <div class="mail"><a href="mailto:kathy@millhousenchurch.com">kathy@millhousenchurch.com</a> </div>
-                            <div class="mail"><a href="tel:8125912433">812-591-2433</a></div>
+                            <h2 class="media-heading">Mollie Johannigman</h2>
+                            <div class="job">Administrator of Religious Education</div>
+                            <div class="mail"><a href="mailto:mollie@millhousenchurch.com">mollie@millhousenchurch.com</a> </div>
                         </div>
                     </div>
                 </div>
@@ -69,11 +68,11 @@
             <div class="col-md-6">
                 <div class="business-card">
                     <div class="media">
-                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/mm.png" alt="Sister Dianne Kaimann"> </div>
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/mm.png" alt="Rita Menkedick"> </div>
                         <div class="media-body">
-                            <h2 class="media-heading">Sister Dianne Kaimann</h2>
+                            <h2 class="media-heading">Rita Menkedick</h2>
                             <div class="job">Bookkeeper</div>
-                            <div class="mail"><a href="mailto:sisterdianne@millhousenchurch.com">sisterdianne@millhousenchurch.com</a> </div>
+                            <div class="mail"><a href="mailto:rita@millhousenchurch.com">rita@millhousenchurch.com</a> </div>
                         </div>
                     </div>
                 </div>
