--- a/faith-formation/high-school/index.html
+++ b/faith-formation/high-school/index.html
@@ -11,7 +11,10 @@
 
     <div class="container">
         <h1>Junior/Senior High School Faith Formation</h1>
-        <p>Classes are currently out for the summer and will resume this fall.</p>
+        <p>Classes begin August 26th</p>
+<object data="/faith-formation/high-school/hs-ff-schedule.pdf" type="application/pdf" width="100%" height="800">
+                <p>This browser does not support PDFs. Please <a href="/faith-formation/high-school/hs-ff-schedule.pdf">download the PDF</a> to view it.</p>
+            </object>
     </div>
     {{.Include "/templates/footer.html"}}
 
