Remove Auction Links

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-                                    <div class="item">
+                                    <div class="item active">
 
                                 <div class="img-slide3">
                     <div class="carousel-caption">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div> -->
-                         <div class="item active">
+                     <!--    <div class="item active">
                 <div class="img-slide1">
                     <div class="carousel-caption">
                         <p>The parish auction will be on August 11th!</p>
@@ -62,7 +62,7 @@
                             Learn More
                         </a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- Carousel controls -->
