Update Staff on Homepage

--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
                 <h5>Sacramental Minister</h5>
             </div>
             <div class="col-md-4"><img src="/img/mm.png" alt="Kathy Westrick" height="200" />
-                <h4>Kathy Westrick</h4>
-                <h5>Director of Religious Education</h5>
+                <h4>Mollie Johannigman</h4>
+                <h5>Administrator of Religious Education</h5>
             </div>
             <div class="col-md-6"><img src="/img/fr-john-geis.png" alt="Father John Geis" height="200" />
                 <h4>Father John Geis</h4>
                 <h5>Sacramental Minister</h5>
             </div>
             <div class="col-md-6"><img src="/img/mm.png" alt="Sister Dianne Kaimann" height="200" />
-                <h4>Sister Dianne Kaimann</h4>
+                <h4>Rita Menkedick</h4>
                 <h5>Bookkeeper</h5>
             </div>
 
