Fix Upcoming Events

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <script src="/js/format-google-calendar.js"></script>
     <script>
         formatGoogleCalendar.init({
-            calendarUrl: 'https://www.googleapis.com/calendar/v3/calendars/millhousenchurch.com_9og4v0j9kgl200r65quv01d65c@group.calendar.google.com/events?key=AIzaSyAzEfSIZVELF5T1ZDrd-xwWNwRc69s-Zm8&singleEvents=true&orderBy=startTime',
+            calendarUrl: 'https://www.googleapis.com/calendar/v3/calendars/millhousenchurch.com_9og4v0j9kgl200r65quv01d65c@group.calendar.google.com/events?key=AIzaSyAzEfSIZVELF5T1ZDrd-xwWNwRc69s-Zm8',
             past: false,
             upcoming: true,
             sameDayTimes: true,
