Events Attempted Fix

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
             dayNames: false,
             pastTopN: -1,
             upcomingTopN: 6,
+        recurringEvents: true, 
             itemsTagName: 'li class="event"',
             upcomingSelector: '#events-upcoming',
             pastSelector: '#events-past',
