Remove Kathy's name

--- a/sacraments/index.html
+++ b/sacraments/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="stripe gray-stripe">
         <h2>Confirmation</h2>
-        <p>In order to be confirmed, you must be attending Faith Formation classes. Students are confirmed as Juniors in High School. To sign up for Faith Formation classes, please <a href="/about/staff/">contact Kathy Westrick</a>.</p>
+        <p>In order to be confirmed, you must be attending Faith Formation classes. Students are confirmed as Juniors in High School. To sign up for Faith Formation classes, please <a href="/about/staff/">contact our Administrator of Religious Education</a>.</p>
     </div>
     <div class="stripe white-stripe">
         <h2>Annointing of the Sick</h2>
