Add Server's Manual

--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
                                 <a href="/about/church-closings.pdf" class="btn btn-default">
                                 Get Closing Notifications!
                             </a>
+<a href="/servers/servers-manual.pdf" class="btn btn-default">
+                                View the Server's Manual
+                            </a>
                             </div>
                         </div>
                     </div>
