--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             </div>
             <div class="item active">
 
-            <!--    <div class="img-slide3">
+                <div class="img-slide3">
                     <div class="carousel-caption">
                         <p>Join us for Mass every Sunday at 8 AM!</p>
                         <a href="/about/directions/" class="btn btn-default">
                             Get Directions
                         </a>
                     </div>
-                </div>-->
+                </div><!--
 <div class="img-slide3">
                     <div class="carousel-caption">
                         <p>Mass for October 20/21 will be on Satuday at 4 PM for the Harvest Party</p>
@@ -49,7 +49,7 @@
                             Harvest Party Flyer
                         </a>
                     </div>
-                </div>
+                </div>-->
             </div>
             <!-- <div class="item">
                 <div class="img-slide4">
