United Catholic Appeal

--- a/index.html
+++ b/index.html
@@ -41,15 +41,17 @@
                             Get Directions
                         </a>
                     </div>
-                </div><!--
-<div class="img-slide3">
+                </div>
+            </div>
+            <div class="item">
+                <div class="img-slide3">
                     <div class="carousel-caption">
-                        <p>Mass for October 20/21 will be on Satuday at 4 PM for the Harvest Party</p>
-                        <a href="/harvest-party-2018.pdf" class="btn btn-default">
-                            Harvest Party Flyer
+                        <p>Support the Archdiocese's United Catholic Appeal</p>
+                        <a href="https://www.youtube.com/watch?v=Q2yUGjeBiV0" class="btn btn-default">
+                            View the Video
                         </a>
                     </div>
-                </div>-->
+                </div>
             </div>
             <!-- <div class="item">
                 <div class="img-slide4">
@@ -197,7 +199,7 @@
                                 <a href="/about/church-closings.pdf" class="btn btn-default">
                                 Get Closing Notifications!
                             </a>
-<a href="/servers/servers-manual.pdf" class="btn btn-default">
+                                <a href="/servers/servers-manual.pdf" class="btn btn-default">
                                 View the Server's Manual
                             </a>
                             </div>
@@ -242,7 +244,7 @@
             dayNames: false,
             pastTopN: -1,
             upcomingTopN: 6,
-        recurringEvents: true, 
+            recurringEvents: true,
             itemsTagName: 'li class="event"',
             upcomingSelector: '#events-upcoming',
             pastSelector: '#events-past',
