--- a/ministry-schedule/index.html
+++ b/ministry-schedule/index.html
@@ -11,9 +11,11 @@
     {{.Include "/templates/header.html"}}
     <div class="container bulletin-embed">
         <h1>Ministry Schedule</h1>
-        <object data="2018-12.pdf" type="application/pdf" width="100%" height="800">
-                <p>This browser does not support PDFs. Please <a href="2018-12.pdf">download the PDF</a> to view it.</p>
+        <object data="files/2019/2019-01.pdf" type="application/pdf" width="100%" height="800">
+                <p>This browser does not support PDFs. Please <a href="files/2019/2019-01.pdf">download the PDF</a> to view it.</p>
             </object>
+<h3>Need an older list?</h3>
+        <p>If you are in need of an older ministry list, <a href="/ministry-schedule/files/">browse our archives</a>.</p>
     </div>
     {{.Include "/templates/footer.html"}}
 </body>
