Timed Faith Formation Cancellation Message

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     {{.Include "/templates/header.html"}}
-<div style=display:none class="stripe red-stripe" id=hours-anomaly><p>We will be closed January 20<sup>th</sup> due to weather conditions.</p></div><script>var ts=Math.round((new Date()).getTime()/1000);anomaly=document.getElementById('hours-anomaly');if(ts<=1548003600){anomaly.style.display="block";}else{anomaly.style.display="none";}</script>
+<div style=display:none class="stripe red-stripe" id=hours-anomaly><p>Faith Formation classes for January 30<sup>th</sup> have been cancelled due to the polar vortex.</p></div><script>var ts=Math.round((new Date()).getTime()/1000);anomaly=document.getElementById('hours-anomaly');if(ts<=1548900000){anomaly.style.display="block";}else{anomaly.style.display="none";}</script>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
