--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 
 <body>
     {{.Include "/templates/header.html"}}
-<div style=display:none class="stripe red-stripe" id=hours-anomaly><p>Faith Formation classes for January 30<sup>th</sup> have been cancelled due to the polar vortex.</p></div><script>var ts=Math.round((new Date()).getTime()/1000);anomaly=document.getElementById('hours-anomaly');if(ts<=1548900000){anomaly.style.display="block";}else{anomaly.style.display="none";}</script>
+    <div style=display:none class="stripe red-stripe" id=hours-anomaly>
+        <p>Faith Formation classes for January 30<sup>th</sup> have been cancelled due to the polar vortex.</p>
+    </div>
+    <script>
+        var ts = Math.round((new Date()).getTime() / 1000);
+        anomaly = document.getElementById('hours-anomaly');
+        if (ts <= 1548900000) {
+            anomaly.style.display = "block";
+        } else {
+            anomaly.style.display = "none";
+        }
+
+    </script>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
@@ -33,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item active">
+            <div class="item">
 
                 <div class="img-slide3">
                     <div class="carousel-caption">
@@ -44,13 +56,10 @@
                     </div>
                 </div>
             </div>
-            <div class="item">
-                <div class="img-slide3">
+            <div class="item active">
+                <div class="img-slide5">
                     <div class="carousel-caption">
-                        <p>Support the Archdiocese's United Catholic Appeal</p>
-                        <a href="https://www.youtube.com/watch?v=Q2yUGjeBiV0" class="btn btn-default">
-                            View the Video
-                        </a>
+                        <p>Happy Easter to all!</p>
                     </div>
                 </div>
             </div>
@@ -131,22 +140,22 @@
                 <h4>St. Maurice</h4>
                 <h5>Napoleon</h5>
                 <a href="http://stmauricechurch.org/index.html" class="btn btn-inv">
-                        Visit Site
-                    </a>
+                    Visit Site
+                </a>
             </div>
             <div class="col-md-4"><img src="/img/immaculate-conception.jpg" alt="Immaculate Conception Millhousen" height="200" />
                 <h4>Immaculate Conception</h4>
                 <h5>Millhousen</h5>
                 <a href="/about/mass/" class="btn btn-inv">
-                        Mass Time
-                    </a>
+                    Mass Time
+                </a>
             </div>
             <div class="col-md-4"><img src="/img/st-john.jpg" alt="St. John the Baptist Osgood" height="200" />
                 <h4>St. John the Baptist</h4>
                 <h5>Osgood</h5>
                 <a href="http://www.stjohncatholicchurchosgood.com/" class="btn btn-inv">
-                        Visit Site
-                    </a>
+                    Visit Site
+                </a>
             </div>
 
         </div>
@@ -154,14 +163,14 @@
             <div class="col-md-6"><img src="/img/ArchIndy.svg" alt="ArchIndy Coat of Arms" height="200" title="By Alekjds (Own work) [CC BY 1.0 (http://creativecommons.org/licenses/by/1.0), GFDL (http://www.gnu.org/copyleft/fdl.html) or CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0/)], via Wikimedia Commons" />
                 <h3>Archdiocese of Indianapolis</h3>
                 <a href="http://www.archindy.org/" class="btn btn-inv">
-                        Visit Site
-                    </a>
+                    Visit Site
+                </a>
             </div>
             <div class="col-md-6"><img src="/img/deanery.jpg" alt="Batesville Deanery Logo" height="200" />
                 <h3>Batesville Deanery</h3>
                 <a href="http://batesvilledeanery.com/" class="btn btn-inv">
-                        Visit Site
-                    </a>
+                    Visit Site
+                </a>
             </div>
         </div>
     </div>
@@ -171,14 +180,12 @@
                 <div class="col-md-4">
                     <div class="photo-gallery">
                         <h3>Photo Gallery</h3> <span id="random_image">
-  <script type="text/javascript"
-      src="//gallery.millhousenchurch.com/piwigo-random-backend.php?maximages=9&size=square&target=_blank"
-      async>
-  </script>
-                    </span>
+                            <script type="text/javascript" src="//gallery.millhousenchurch.com/piwigo-random-backend.php?maximages=9&size=square&target=_blank" async>
+                            </script>
+                        </span>
                         <a href="https://gallery.millhousenchurch.com/" class="btn btn-default">
-                                Visit the Gallery
-                            </a>
+                            Visit the Gallery
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -191,14 +198,14 @@
                         <div class="col-md-12">
                             <div class="social-media">
                                 <a href="https://www.facebook.com/Millhousen/" class="btn btn-default">
-                                Check us out on Facebook!
-                            </a>
+                                    Check us out on Facebook!
+                                </a>
                                 <a href="/about/church-closings.pdf" class="btn btn-default">
-                                Get Closing Notifications!
-                            </a>
+                                    Get Closing Notifications!
+                                </a>
                                 <a href="/servers/servers-manual.pdf" class="btn btn-default">
-                                View the Server's Manual
-                            </a>
+                                    View the Server's Manual
+                                </a>
                             </div>
                         </div>
                     </div>
