Add Raffle Prizes

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -17,7 +17,7 @@
         <h1 class="main-title">Immaculate Conception Community Auction</h1>
         <p>Saturday, August 10th 2019 beginning at 9:30am</p>
     </div>
-  <!--<div class="stripe white-stripe">
+    <!--<div class="stripe white-stripe">
         <h2>Sale Bill</h2>
         <p>as of August 4, 2018</p>
         <object data="sale-bill-2018.pdf" type="application/pdf" width="100%" height="800">
@@ -49,195 +49,148 @@
                             Get Directions
             </a>
         </div>
-        <!--<div class="col-md-6">
-            <h2>Raffle Prizes</h2>
-            <p>Don't forget to enter the 2017 Raffle, featuring many great prizes including:</p>
-            <table>
-                <tr>
-                    <th>Donated By</th>
-                    <th>Number to Give Away</th>
-                    <th>Prize</th>
-                </tr>
-                <tr>
-                    <td><a href="http://donmeyerford.com/">Don Meyer Ford</a></td>
-                    <td>2</td>
-                    <td>Oil Changes</td>
-                </tr>
-                <tr>
-                    <td><a href="http://donmeyerford.com/">Don Meyer Ford</a></td>
-                    <td>2</td>
-                    <td>Hats</td>
-                </tr>
-                <tr>
-                    <td><a href="http://donmeyerford.com/">Don Meyer Ford</a></td>
-                    <td>1</td>
-                    <td>T-Shirt</td>
-                </tr>
-                <tr>
-                    <td><a href="http://donmeyerford.com/">Don Meyer Ford</a></td>
-                    <td>1</td>
-                    <td>Nerf Football</td>
-                </tr>
-                <tr>
-                    <td><a href="http://wyaloosingcreek.weebly.com/">Wyaloosing Creek Golf Course</a></td>
-                    <td>1</td>
-                    <td>2 18-Hole Games with Cart</td>
-                </tr>
-                <tr>
-                    <td><a href="http://www.stonesfarmservice.com/">Stone's Farm Service</a></td>
-                    <td>1</td>
-                    <td>Wash Bucket and Lights</td>
-                </tr>
-                <tr>
-                    <td><a href="http://greensburg.hilliardfc.com/">Hilliard Lyons</a></td>
-                    <td>1</td>
-                    <td>$250 Cash</td>
-                </tr>
-                <tr>
-                    <td><a href="http://newpointstone.com/harris-city/">Harris City Stone and Bob Hardebeck</a></td>
-                    <td>1</td>
-                    <td>One Load of Stone and Trucking</td>
-                </tr>
-                <tr>
-                    <td><a href="https://www.facebook.com/parksidelanesbowling/">Parkside Lanes</a></td>
-                    <td>1</td>
-                    <td>6 Games of Mini Golf and 6 Games of Bowling</td>
-                </tr>
-                <tr>
-                    <td><a href="https://www.facebook.com/pages/Tree-City-Oil-Lube/151356268239020">Tree City Oil &amp; Lube</a></td>
-                    <td>1</td>
-                    <td>Free Oil Change</td>
-                </tr>
-                <tr>
-                    <td><a href="http://johannigmanexcavating.com/">Johannigman Excavating</a></td>
-                    <td>1</td>
-                    <td>$100</td>
-                </tr>
-                <tr>
-                    <td><a href="http://www.drvinyl.com/">Phil Niemeyer - Dr. Vinyl</a></td>
-                    <td>1</td>
-                    <td>2 Reds Tickets</td>
-                </tr>
-                <tr>
-                    <td>Millhousen Ladies Auxiliary</td>
-                    <td>1</td>
-                    <td>$50</td>
-                </tr>
-
-                <tr>
-                    <td><a href="https://www.napoleonstatebank.com/">The Napoleon State Bank</a></td>
-                    <td>1</td>
-                    <td>4 Cincinnati Reds Tickets with Parking Pass</td>
-                </tr>
-                <tr>
-                    <td>Jim Kunz and Kenny Tebbe - Beck's Seeds</td>
-                    <td>1</td>
-                    <td>$25</td>
-                </tr>
-                <tr>
-                    <td><a href="https://www.facebook.com/KnightsofStJohnMillhousen/">Knights of St. John Millhousen</a></td>
-                    <td>1</td>
-                    <td>$50</td>
-                </tr>
-                <tr>
-                    <td><a href="http://oldenburgfranciscans.org/">Sisters of St. Francis, Oldenburg</a></td>
-                    <td>1</td>
-                    <td>Mickey Gift Basket</td>
-                </tr>
-                <tr>
-                    <td><a href="http://www.stonesfamilyrestaurant.com/">Stone's Family Restaurant and Tavern</a></td>
-                    <td>2</td>
-                    <td>$25 Gift Certificate and T-shirt</td>
-                </tr>
-                <tr>
-                    <td><a href="https://goo.gl/maps/cDuA4tbKnfQ2">K-Fab</a></td>
-                    <td>1</td>
-                    <td>$100</td>
-                </tr>
-                <tr>
-                    <td><a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/reservation">Holiday Inn Express</a></td>
-                    <td>1</td>
-                    <td>Free Overnight Stay</td>
-                </tr>
-                <tr>
-                    <td><a href="http://www.premierag.com/">Premier Ag</a></td>
-                    <td>4</td>
-                    <td>$50 Gas Card</td>
-                </tr>
-                <tr>
-                    <td><a href="https://www.facebook.com/pages/Five-Points-Tire-Service/117413304986214">Five Points Tire Service</a></td>
-                    <td>1</td>
-                    <td>Tire Rotation and Balancing</td>
-                </tr>
-                <tr>
-                    <td>Norb Bedel</td>
-                    <td>2</td>
-                    <td>Half Hogs with Normal Processing</td>
-                </tr>
-                <tr>
-                    <td><a href="https://www.facebook.com/pages/Napolean-Meat-Locker/228490733959398">Napoleon Locker</a></td>
-                    <td>1</td>
-                    <td>$30 Certificate</td>
-                </tr>
-                <tr>
-                    <td><a href="http://www.wearlymonuments.com/locations/imported-2010-02-26/scheidler-wearly-monuments/?back=Locations">Scheidler Wearly Monuments</a></td>
-                    <td>1</td>
-                    <td>$50</td>
-                </tr>
-                <tr>
-                    <td><a href="https://www.facebook.com/HOPjimscheidler/">HOP Communications - Jim Scheidler and Mark Fry</a></td>
-                    <td>1</td>
-                    <td>$50</td>
-                </tr>
-                <tr>
-                    <td><a href="http://www.smithimplements.com/about-us/locations/greensburgin.aspx">Smith Implements</a></td>
-                    <td>1</td>
-                    <td>Toy Semi</td>
-                </tr>
-                <tr>
-                    <td><a href="http://www.smithimplements.com/about-us/locations/greensburgin.aspx">Smith Implements</a></td>
-                    <td>1</td>
-                    <td>Youth Hat</td>
-                </tr>
-                <tr>
-                    <td><a href="http://www.smithimplements.com/about-us/locations/greensburgin.aspx">Smith Implements</a></td>
-                    <td>1</td>
-                    <td>Toy S690 Combine</td>
-                </tr>
-                <tr>
-                    <td><a href="http://lowespellets.com/">Lowe's Pellet and Grain</a></td>
-                    <td>2</td>
-                    <td>Gift Bags</td>
-                </tr>
-                <tr>
-                    <td><a href="http://walterstire.com/">Walter's Tire Service</a></td>
-                    <td>1</td>
-                    <td>Three Oil Changes</td>
-                </tr>
-            </table>
-            <p>New items added daily!</p>
-        </div>-->
-    </div>
+        <div class="col-md-6">-->
     <div class="stripe white-stripe">
-                <h3>Full Consignment Request</h3>
-                <object data="consignment-request.pdf" type="application/pdf" width="100%" height="800">
-                <p>This browser does not support PDFs. Please <a href="consignment-request.pdf">download the PDF</a> to view it.</p>
-              </object>
-<a href="https://www.auctionzip.com/Listings/3297759.html" class="btn btn-inv">
-                            View More on AuctionZip
-            </a>        
+        <h2>Raffle Prizes</h2>
+        <p>Don't forget to enter the 2019 Raffle, featuring many great prizes including:</p>
+
+        <table>
+            <tr>
+                <th>Donated By</th>
+                <th>Number to Give Away</th>
+                <th>Prize</th>
+            </tr>
+            <tr>
+                <td>Anonymous Donor</td>
+                <td>1</td>
+                <td>$1000 Cash</td>
+            </tr>
+            <tr>
+                <td>Anonymous Donor</td>
+                <td>1</td>
+                <td>$500 Cash</td>
+            </tr>
+            <tr>
+                <td><a href="http://donmeyerford.com/">Don Meyer Ford</a></td>
+                <td>1</td>
+                <td>$150 Cash</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.infarmbureau.com/find-agent/agent-profile/detail/Ken-Ewing-A1645">Farm Bureau - Ken Ewing</a></td>
+                <td>1</td>
+                <td>$100 Cash</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.facebook.com/HOPjimscheidler/">HOP Communications - Jim Scheidler and Mark Fry</a></td>
+                <td>1</td>
+                <td>$100 Cash</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.facebook.com/KnightsofStJohnMillhousen/">Knights of St. John and Ladies Auxilary of Millhousen</a></td>
+                <td>1</td>
+                <td>$50 Cash</td>
+            </tr>
+            <tr>
+                <td>Norb Bedel</td>
+                <td>1</td>
+                <td>2 Half Hogs with Normal Processing</td>
+            </tr>
+            <tr>
+                <td>Dana Fledderman</td>
+                <td>1</td>
+                <td>Quilt</td>
+            </tr>
+            <tr>
+                <td><a href="http://newpointstone.com/harris-city/">Harris City Stone and Bob Hardebeck</a></td>
+                <td>1</td>
+                <td>One Load of Stone and Trucking</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.napoleonstatebank.com/">The Napoleon State Bank</a></td>
+                <td>1</td>
+                <td>4 Cincinnati Reds Tickets with Parking Pass</td>
+            </tr>
+            <tr>
+                <td><a href="http://www.premierag.com/">Premier Ag</a></td>
+                <td>4</td>
+                <td>$50 Gas Card</td>
+            </tr>
+            <tr>
+                <td><a href="http://oldenburgfranciscans.org/">Sisters of St. Francis, Oldenburg</a></td>
+                <td>1</td>
+                <td>Gift Basket</td>
+            </tr>
+            <tr>
+                <td><a href="http://wyaloosingcreek.weebly.com/">Wyaloosing Creek Golf Course</a></td>
+                <td>1</td>
+                <td>2 18-Hole Games with Cart</td>
+            </tr>
+            <tr>
+                <td><a href="http://walterstire.com/">Walter's Tire Service</a></td>
+                <td>4</td>
+                <td>4-Tire Rotation and Balancing Certificate</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.greensburgsoy.com/">Greensburg Soy Processors</a></td>
+                <td>1</td>
+                <td>Gift Bucket</td>
+            </tr>
+            <tr>
+                <td><a href="http://www.stonesfarmservice.com/">Stone's Farm Service</a></td>
+                <td>1</td>
+                <td>Wash Bucket and Lights</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.facebook.com/parksidelanesbowling/">Parkside Lanes</a></td>
+                <td>1</td>
+                <td>Bowling and Miniture Golf</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.beckshybrids.com/">Jim Kunz and Kenny Tebbe - Beck's Seeds</a></td>
+                <td>1</td>
+                <td>Beck's Winter Coat</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.facebook.com/pages/Napolean-Meat-Locker/228490733959398">Napoleon Locker</a></td>
+                <td>1</td>
+                <td>$30 Certificate</td>
+            </tr>
+            <tr>
+                <td><a href="https://ekova.com/kova-ag-team/kova-retail/map/">Kova of Westport</a></td>
+                <td>1</td>
+                <td>$25 Certificate</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.facebook.com/RiehleFreshMeat/">Riehle Meat Market, Osgood</a></td>
+                <td>1</td>
+                <td>$10 Certificate</td>
+            </tr>
+            <tr>
+                <td><a href="https://etczone.com/">Enhanced Telecommunications</a></td>
+                <td>1</td>
+                <td>Tool Pack and Mag-lite</td>
+            </tr>
+        </table>
+        <p>New items added daily!</p>
+    </div>
+    <div class="stripe gray-stripe">
+        <h3>Full Consignment Request</h3>
+        <object data="consignment-request.pdf" type="application/pdf" width="100%" height="800">
+            <p>This browser does not support PDFs. Please <a href="consignment-request.pdf">download the PDF</a> to view it.</p>
+        </object>
+        <a href="https://www.auctionzip.com/Listings/3297759.html" class="btn btn-default">
+            View More on AuctionZip
+        </a>
     </div>
 
 
-    <div class="stripe gray-stripe">
+    <div class="stripe white-stripe">
         <h3>Auction 2016 Photos</h3> <span id="random_image">
-  <script type="text/javascript"
-      src="//gallery.millhousenchurch.com/piwigo-random-backend.php?maximages=6&size=2small&cat_id=3"
-      async>
-  </script>
-                    </span>
+            <script type="text/javascript" src="//gallery.millhousenchurch.com/piwigo-random-backend.php?maximages=6&size=2small&cat_id=3" async>
+            </script>
+        </span>
         <a href="https://gallery.millhousenchurch.com/index.php?/category/3">
-            <button type="button" class="btn btn-default">View Full Album</button>
+            <button type="button" class="btn btn-inv">View Full Album</button>
         </a>
     </div>
 
